Fixing bugs which caused add/view directive scope customizations to fail

--- a/web/app/cenozo/add-input.tpl.html
+++ b/web/app/cenozo/add-input.tpl.html
@@ -15,7 +15,7 @@
           ng-attr-id="{{ input.key }}"
           name="name"
           ng-model="record[input.key]"
-          cn-change="check( input.key )"
+          cn-change="check()"
           class="form-control"
           type="text"
           autocomplete="off"
@@ -26,7 +26,7 @@
             <input ng-attr-id="{{ input.key }}"
               name="name"
               ng-model="formattedRecord[input.key][0]"
-              cn-change="check( input.key )"
+              cn-change="check()"
               class="form-control"
               type="text"
               autocomplete="off"
@@ -37,7 +37,7 @@
             <select ng-attr-id="{{ input.key }}"
                     name="name"
                     ng-model="formattedRecord[input.key][1]"
-                    ng-change="check( input.key )"
+                    ng-change="check()"
                     class="form-control"
                     ng-disabled="true === input.constant || 'add' == input.constanta"
                     ng-required="model.metadata.columnList[input.key].required">
@@ -55,11 +55,11 @@
           ng-attr-id="{{ input.key }}"
           name="name"
           ng-model="record[input.key]"
-          uib-typeahead="item for item in getTypeaheadValues( input, $viewValue )"
+          uib-typeahead="item for item in getTypeaheadValues( $viewValue )"
           typeahead-editable="false"
-          typeahead-on-select="onSelectTypeahead( input, $item, $model, $label )"
+          typeahead-on-select="onSelectTypeahead( $item, $model, $label )"
           typeahead-min-length="input.typeahead.minLength"
-          cn-change="check( input.key )"
+          cn-change="check()"
           class="form-control"
           ng-class="{ 'loading-small': input.typeahead.isLoading }"
           type="text"
@@ -70,11 +70,11 @@
           ng-attr-id="{{ input.key }}"
           name="name"
           ng-model="formattedRecord[input.key]"
-          uib-typeahead="item.id as item.value for item in getTypeaheadValues( input, $viewValue )"
+          uib-typeahead="item.id as item.value for item in getTypeaheadValues( $viewValue )"
           typeahead-editable="false"
-          typeahead-on-select="onSelectTypeahead( input, $item, $model, $label )"
+          typeahead-on-select="onSelectTypeahead( $item, $model, $label )"
           typeahead-min-length="input.typeahead.minLength"
-          cn-change="check( input.key )"
+          cn-change="check()"
           class="form-control"
           ng-class="{ 'loading-small': input.typeahead.isLoading }"
           type="text"
@@ -89,17 +89,17 @@
           type="hidden"></input>
         <input ng-switch-when="datetime"
           ng-model="formattedRecord[input.key]"
-          cn-change="check( input.key )"
+          cn-change="check()"
           class="form-control"
           type="text"
-          ng-click="true === input.constant || 'add' == input.constant ? null : selectDatetime( input )"
+          ng-click="true === input.constant || 'add' == input.constant ? null : selectDatetime()"
           ng-readonly="true === input.constant || 'add' == input.constant"
           onkeydown="return false"></input>
         <input ng-switch-when="color"
           ng-attr-id="{{ input.key }}"
           name="name"
           ng-model="record[input.key]"
-          cn-change="check( input.key )"
+          cn-change="check()"
           class="form-control"
           type="text"
           colorpicker="hex"
@@ -115,7 +115,7 @@
           ng-options="item.value as item.name for item in input.enumList"
           cn-options-disabled="item.disabled for item in input.enumList"
           ng-model="record[input.key]"
-          ng-change="check( input.key )"
+          ng-change="check()"
           class="form-control"
           ng-disabled="true === input.constant || 'add' == input.constant ||
                        !input.enumList || 1 >= input.enumList.length"
@@ -125,7 +125,7 @@
           ng-attr-id="{{ input.key }}"
           name="name"
           ng-model="record[input.key]"
-          cn-change="check( input.key )"
+          cn-change="check()"
           class="form-control"
           ng-readonly="true === input.constant || 'add' == input.constant"
           ng-required="model.metadata.columnList[input.key].required"></textarea>
