--- a/web/app/cenozo/add-input.tpl.html
+++ b/web/app/cenozo/add-input.tpl.html
@@ -65,6 +65,7 @@
           type="text"
           placeholder="(Type the first few letters to search possible values)"
           autocomplete="off"
+          ng-readonly="true === input.constant || 'add' == input.constant"
           ng-required="model.metadata.columnList[input.key].required"></input>
         <input ng-switch-when="lookup-typeahead"
           ng-attr-id="{{ input.key }}"
@@ -80,6 +81,7 @@
           type="text"
           placeholder="(Type the first few letters to search possible values)"
           autocomplete="off"
+          ng-readonly="true === input.constant || 'add' == input.constant"
           ng-required="model.metadata.columnList[input.key].required"></input>
         <input ng-switch-when="datetime"
           ng-attr-id="{{ input.key }}"
@@ -132,101 +134,196 @@
         <div ng-switch-when="days" class="row">
           <div class="col-sm-1" style="width: 14.28%">
             <label class="checkbox" style="left: 20px" for="sunday">
-              <input id="sunday" name="name" ng-model="record.sunday" type="checkbox"> Sunday
+              <input
+                id="sunday"
+                name="name"
+                ng-model="record.sunday"
+                ng-disabled="true === input.constant || 'add' == input.constant"
+                type="checkbox"> Sunday
             </label>
           </div>
           <div class="col-sm-1" style="width: 14.28%">
             <label class="checkbox" style="left: 20px" for="monday">
-              <input id="monday" name="name" ng-model="record.monday" type="checkbox"> Monday
+              <input
+                id="monday"
+                name="name"
+                ng-model="record.monday"
+                ng-disabled="true === input.constant || 'add' == input.constant"
+                type="checkbox"> Monday
             </label>
           </div>
           <div class="col-sm-1" style="width: 14.28%">
             <label class="checkbox" style="left: 20px" for="tuesday">
-              <input id="tuesday" name="name" ng-model="record.tuesday" type="checkbox"> Tuesday
+              <input
+                id="tuesday"
+                name="name"
+                ng-model="record.tuesday"
+                ng-disabled="true === input.constant || 'add' == input.constant"
+                type="checkbox"> Tuesday
             </label>
           </div>
           <div class="col-sm-1" style="width: 14.28%">
             <label class="checkbox" style="left: 20px" for="wednesday">
-              <input id="wednesday" name="name" ng-model="record.wednesday" type="checkbox"> Wednesday
+              <input
+                id="wednesday"
+                name="name"
+                ng-model="record.wednesday"
+                ng-disabled="true === input.constant || 'add' == input.constant"
+                type="checkbox"> Wednesday
             </label>
           </div>
           <div class="col-sm-1" style="width: 14.28%">
             <label class="checkbox" style="left: 20px" for="thursday">
-              <input id="thursday" name="name" ng-model="record.thursday" type="checkbox"> Thursday
+              <input
+                id="thursday"
+                name="name"
+                ng-model="record.thursday"
+                ng-disabled="true === input.constant || 'add' == input.constant"
+                type="checkbox"> Thursday
             </label>
           </div>
           <div class="col-sm-1" style="width: 14.28%">
             <label class="checkbox" style="left: 20px" for="friday">
-              <input id="friday" name="name" ng-model="record.friday" type="checkbox"> Friday
+              <input
+                id="friday"
+                name="name"
+                ng-model="record.friday"
+                ng-disabled="true === input.constant || 'add' == input.constant"
+                type="checkbox"> Friday
             </label>
           </div>
           <div class="col-sm-1" style="width: 14.28%">
             <label class="checkbox" style="left: 20px" for="saturday">
-              <input id="saturday" name="name" ng-model="record.saturday" type="checkbox"> Saturday
+              <input
+                id="saturday"
+                name="name"
+                ng-model="record.saturday"
+                ng-disabled="true === input.constant || 'add' == input.constant"
+                type="checkbox"> Saturday
             </label>
           </div>
         </div>
         <div ng-switch-when="months" class="row">
           <div class="col-sm-2">
             <label class="checkbox" style="left: 20px" for="january">
-              <input id="january" name="name" ng-model="record.january" type="checkbox"> January
+              <input
+                id="january"
+                name="name"
+                ng-model="record.january"
+                ng-disabled="true === input.constant || 'add' == input.constant"
+                type="checkbox"> January
             </label>
           </div>
           <div class="col-sm-2">
             <label class="checkbox" style="left: 20px" for="february">
-              <input id="february" name="name" ng-model="record.february" type="checkbox"> February
+              <input
+                id="february"
+                name="name"
+                ng-model="record.february"
+                ng-disabled="true === input.constant || 'add' == input.constant"
+                type="checkbox"> February
             </label>
           </div>
           <div class="col-sm-2">
             <label class="checkbox" style="left: 20px" for="march">
-              <input id="march" name="name" ng-model="record.march" type="checkbox"> March
+              <input
+                id="march"
+                name="name"
+                ng-model="record.march"
+                ng-disabled="true === input.constant || 'add' == input.constant"
+                type="checkbox"> March
             </label>
           </div>
           <div class="col-sm-2">
             <label class="checkbox" style="left: 20px" for="april">
-              <input id="april" name="name" ng-model="record.april" type="checkbox"> April
+              <input
+                id="april"
+                name="name"
+                ng-model="record.april"
+                ng-disabled="true === input.constant || 'add' == input.constant"
+                type="checkbox"> April
             </label>
           </div>
           <div class="col-sm-2">
             <label class="checkbox" style="left: 20px" for="may">
-              <input id="may" name="name" ng-model="record.may" type="checkbox"> May
+              <input
+                id="may"
+                name="name"
+                ng-model="record.may"
+                ng-disabled="true === input.constant || 'add' == input.constant"
+                type="checkbox"> May
             </label>
           </div>
           <div class="col-sm-2">
             <label class="checkbox" style="left: 20px" for="june">
-              <input id="june" name="name" ng-model="record.june" type="checkbox"> June
+              <input
+                id="june"
+                name="name"
+                ng-model="record.june"
+                ng-disabled="true === input.constant || 'add' == input.constant"
+                type="checkbox"> June
             </label>
           </div>
         </div>
         <div ng-switch-when="months" class="row">
           <div class="col-sm-2">
             <label class="checkbox" style="left: 20px" for="july">
-              <input id="july" name="name" ng-model="record.july" type="checkbox"> July
+              <input
+                id="july"
+                name="name"
+                ng-model="record.july"
+                ng-disabled="true === input.constant || 'add' == input.constant"
+                type="checkbox"> July
             </label>
           </div>
           <div class="col-sm-2">
             <label class="checkbox" style="left: 20px" for="august">
-              <input id="august" name="name" ng-model="record.august" type="checkbox"> August
+              <input
+                id="august"
+                name="name"
+                ng-model="record.august"
+                ng-disabled="true === input.constant || 'add' == input.constant"
+                type="checkbox"> August
             </label>
           </div>
           <div class="col-sm-2">
             <label class="checkbox" style="left: 20px" for="september">
-              <input id="september" name="name" ng-model="record.september" type="checkbox"> September
+              <input
+                id="september"
+                name="name"
+                ng-model="record.september"
+                ng-disabled="true === input.constant || 'add' == input.constant"
+                type="checkbox"> September
             </label>
           </div>
           <div class="col-sm-2">
             <label class="checkbox" style="left: 20px" for="october">
-              <input id="october" name="name" ng-model="record.october" type="checkbox"> October
+              <input
+                id="october"
+                name="name"
+                ng-model="record.october"
+                ng-disabled="true === input.constant || 'add' == input.constant"
+                type="checkbox"> October
             </label>
           </div>
           <div class="col-sm-2">
             <label class="checkbox" style="left: 20px" for="november">
-              <input id="november" name="name" ng-model="record.november" type="checkbox"> November
+              <input
+                id="november"
+                name="name"
+                ng-model="record.november"
+                ng-disabled="true === input.constant || 'add' == input.constant"
+                type="checkbox"> November
             </label>
           </div>
           <div class="col-sm-2">
             <label class="checkbox" style="left: 20px" for="december">
-              <input id="december" name="name" ng-model="record.december" type="checkbox"> December
+              <input
+                id="december"
+                name="name"
+                ng-model="record.december"
+                ng-disabled="true === input.constant || 'add' == input.constant"
+                type="checkbox"> December
             </label>
           </div>
         </div>
