Fixing bug in modal restriction
Rank type wasn't handling empty values correctly
Merged rank and number type

--- a/web/app/cenozo/modal-restrict.tpl.html
+++ b/web/app/cenozo/modal-restrict.tpl.html
@@ -140,9 +140,10 @@
             <input id="{{ 'value' + $index }}"
                    name="{{ 'value' + $index }}"
                    ng-model="restrict.value"
-                   ng-change="local.describeRestriction( $index )"
+                   ng-change="local.updateEmpty( $index ); local.describeRestriction( $index )"
                    class="form-control"
                    type="number"
+                   ng-attr-min="{{ 'rank' == local.type ? 1 : null }}"
                    placeholder="{{ null === restrict.value ? '(empty)' : 'restriction number' }}"
                    cn-autofocus />
           </div>
@@ -200,48 +201,6 @@
               <option class="not-nullable" ng-disabled="null === restrict.value" value="PB">PB</option>
               <option class="not-nullable" ng-disabled="null === restrict.value" value="EB">EB</option>
             </select>
-          </div>
-          <div class="col-sm-2">
-            <label class="btn btn-default pull-right"
-                   ng-class="{'btn-warning':local.emptyList[$index].isEmpty}"
-                   ng-model="local.emptyList[$index].isEmpty"
-                   ng-click="local.toggleEmpty( $index )"
-                   uib-btn-checkbox>Empty</label>
-          </div>
-        </div>
-      </div>
-      <div ng-switch-when="rank">
-        <div class="form-group">
-          <label for="{{ 'test' + $index }}" class="col-sm-3 control-label">Comparison</label>
-          <div class="col-sm-9">
-            <select id="{{ 'test' + $index }}"
-                    name="{{ 'test' + $index }}"
-                    ng-model="restrict.test"
-                    ng-change="local.updateEmpty( $index ); local.describeRestriction( $index )"
-                    class="form-control">
-              <option value="&lt;=&gt;">is</option>
-              <option value="&lt;&gt;">is not</option>
-              <option class="not-nullable" ng-disabled="null === restrict.value" value="&gt;">greater than</option>
-              <option class="not-nullable" ng-disabled="null === restrict.value" value="&gt;=">greater or equal to</option>
-              <option class="not-nullable" ng-disabled="null === restrict.value" value="&lt;">less than</option>
-              <option class="not-nullable" ng-disabled="null === restrict.value" value="&lt;=">less or equal to</option>
-            </select>
-          </div>
-        </div>
-        <div class="form-group">
-          <label for="{{ 'value' + $index }}" class="col-sm-3 control-label">Value</label>
-          <div class="col-sm-7">
-            {{ form }}
-            <input id="{{ 'value' + $index }}"
-                   name="{{ 'value' + $index }}"
-                   ng-model="restrict.value"
-                   ng-change="local.describeRestriction( $index )"
-                   class="form-control"
-                   type="number"
-                   min="1"
-                   placeholder="{{ null === restrict.value ? '(empty)' : 'restriction rank' }}"
-                   ng-disabled="null === restrict.value"
-                   cn-autofocus />
           </div>
           <div class="col-sm-2">
             <label class="btn btn-default pull-right"
