Replacing the small branding logo with the standard one

--- a/web/app/root/home.tpl.html
+++ b/web/app/root/home.tpl.html
@@ -45,7 +45,7 @@
       </div>
       <div class="col-sm-4 hidden-xs">
         <h3>
-          <img ng-src="{{ cenozoUrl }}/img/branding.small.png"
+          <img ng-src="{{ cenozoUrl }}/img/branding.png"
                class="img-responsive"
                onerror="this.style.display='none'"
                alt="" />
