Fixing bug in export list; removing stray debug statements; correcting typo in extra-operation-button-group template

--- a/web/app/cenozo/extra-operation-button-group.tpl.html
+++ b/web/app/cenozo/extra-operation-button-group.tpl.html
@@ -9,7 +9,7 @@
             uib-tooltip="{{ op.help }}"
             tooltip-placement="right"
             data-toggle="dropdown"
-            airea-haspopup="true"
+            aria-haspopup="true"
             aria-expanded="false"
             ng-click="op.operation( state, model )">
       {{ op.title }}
