--- a/web/app/cenozo/extra-operation-button-group.tpl.html
+++ b/web/app/cenozo/extra-operation-button-group.tpl.html
@@ -15,8 +15,9 @@
       {{ op.title }}
       <span class="caret" ng-if="op.operations"></span>
     </button>
-    <ul class="dropdown-menu full-width" ng-if="op.operations" aria-labelledby="{{ op.id }}">
+    <ul class="dropdown-menu" ng-if="op.operations" aria-labelledby="{{ op.id }}">
       <li ng-repeat="subOp in op.operations"
+          style="width: 50%"
           ng-if="subOp.isIncluded( state, model )"
           ng-class="subOp.classes + ( subOp.isDisabled( state, model ) ? ' disabled' : '' )">
         <a id="{{ subOp.id }}"
